[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ultrasonic-img-steg"
version = "1.0.1"
description = "A package that allows embedding images or encoding data into (and decoding from) the ultrasound frequencies of .wav files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "soundfile>=0.12.0",
    "Pillow>=9.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ultrasonic_img_steg"]

[project.urls]
Repository = "https://github.com/nicholas-lua/ultrasonic-img-steg"